Fix text wrapping

--- a/imessage-exporter/src/exporters/resources/style.css
+++ b/imessage-exporter/src/exporters/resources/style.css
@@ -8,6 +8,7 @@ p {
 
 .message {
 	margin: 1%;
+	overflow-wrap: break-word;
 }
 
 .message .sent.imessage {
